[project]
name = "enchanted_plugin_ascot"
version = "0.1.0"
dependencies = [
    "enchanted_surrogates",
    "numpy",]
requires-python = ">=3.9"
description = "A plugin package for the enchanted-surrogates framework, providing integration with the ASCOT code."
readme = "README.md"
authors = [
    {name = "Daniel Jordan", email = "daniel.jordan@vtt.fi"},
]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."enchanted_surrogates.runners"]
shine_runner = "enchanted_plugin_ascot.shine_runner:ShineRunner"

[project.entry-points."enchanted_surrogates.parsers"]
shine_parser = "enchanted_plugin_ascot.shine_parser:ShineParser"

