[project]
name = "enchanted_plugin_ascot"
version = "0.1.0"
dependencies = [
    "enchanted_surrogates",
    "numpy",
    "mpi4py",
    "openmpi",]
requires-python = ">=3.9"
description = "A plugin package for the enchanted-surrogates framework, providing integration with the ASCOT code."
readme = "README.md"
authors = [
    {name = "Daniel Jordan", email = "daniel.jordan@vtt.fi"},
]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
imas = [
    "imas-python",
]

marker = [
    "unyt"
]

[project.entry-points."enchanted_surrogates.runners"]
shine_runner = "enchanted_plugin_ascot.shine_runner:ShineRunner"
ascot_sdcc_workflow_runner = "enchanted_plugin_ascot.ascot_sdcc_workflow_runner:AscotSdccWorkflowRunner"
marker_ascot_runner = "enchanted_plugin_ascot.marker_ascot_runner:MarkerAscotRunner"

[project.entry-points."enchanted_surrogates.parsers"]
shine_parser = "enchanted_plugin_ascot.shine_parser:ShineParser"
ascot_sdcc_workflow_parser = "enchanted_plugin_ascot.ascot_sdcc_workflow_parser:AscotSdccWorkflowParser"
marker_ascot_parser = "enchanted_plugin_ascot.marker_ascot_parser:MarkerAscotParser"
